--- a/SalesManager/Views/Home/Index.cshtml
+++ b/SalesManager/Views/Home/Index.cshtml
@@ -3,29 +3,70 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Автоматизация отдела продаж</h1>
+    <p class="lead"> Продажи — один из самых сложных и стрессовых элементов любой бизнес-системы. Именно отдел продаж поможет удержать компанию на плаву даже в самые сложные периоды, и он же с легкостью ее потопит, когда этого никто не ожидает. Поэтому, если в отделе продаж есть дыры, то их рано или поздно ощутит на себе вся компания.</p>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-12">
+        <h2>Отдел продаж</h2>
+        <img src="~/Content/images/SM.jpeg" class="img img-responsive" />
+        <ul>
+            Менеджер по продажам должен осуществлять связь между покупателями, и производящими и торговыми организациями. Менеджер по продажам выполняет следующие работы:
+            <li>Обеспечивает и разрабатывает реализацию мероприятий по организации и созданию сети сбыта товаров.</li>
+            <li>Организует преддоговорную работу и заключает договоры.
+            <li>
+                Обеспечивает и создаёт непрерывное обновление информационных баз о клиентах.
+            </li>
+            <li>
+                Проводит анализ объемов продаж и подготавливает отчеты по результатам проведенных анализов для представления руководству.
+            </li>
+        </ul>
+        <ul>
+            Основные задачи менеджера по продажам:
+            <li>
+                Выполнение плана продаж.
+            </li>
+            <li>
+                Управление продажами в своем сегменте.
+            </li>
+            <li>
+                Управление взаимоотношениями с клиентами.
+            </li>
+            <li>
+
+                Контроль дебиторской задолженности.
+
+            </li>
+        </ul>
+        <ul>
+            Функции менеджера по продажам:
+
+            <li>
+                Продажа товаров и услуг.
+            </li>
+            <li>
+                Ведение переговоров, выезд на встречи.
+            </li>
+            <li>
+                Поиск и привлечение новых клиентов.
+            </li>
+            <li>
+                Документооборот, в том числе заключение договоров, выставление счетов, контроль дебиторской задолженности.
+            </li>
+            <li>
+                Выполнение поставленного плана.
+            </li>
+            <li>
+                Ведение базы существующих клиентов и поддержание «отношений» с ними.
+            </li>
+            <li>
+                Знание особенностей продаваемого товара и обстановки в конкурирующей среде.
+            </li>
+            <li>
+                Анализ объемов и итоговая отчетность по выполненным продажам.
+            </li>
+
+        </ul>
     </div>
 </div>
